Commit 2: Creacion de la arquitectura MVC para el backend con entidad, repositorio, servicios y controllorer necesarios

--- a/nomina-backend/src/main/resources/application.properties
+++ b/nomina-backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=nomina-backend
+# Configuración de Base de Datos H2 en memoria para la prueba tecnica
+spring.datasource.url=jdbc:h2:mem:nominadb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Ver las tablas en una consola web (opcional) copiado automaticamente
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
